force-app/main/default/objects/CPQ_Equipment_Override__c/CPQ_Equipment_Override__c.object-meta.xml
<CustomObject>
    <label>Equipment Override</label>
    <nameField>
        <displayFormat>EO-{0000000000}</displayFormat>
        <label>Equipment Override Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Overrides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>