force-app/main/default/objects/CPQ_Equipment_Override__c/fields/CPQ_Account__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Account__c</fullName>
    <description>Identify the customer who purchased equipment</description>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Customer_Bill_To</value>
        </filterItems>
        <infoMessage>Account must be customer ship to</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Equipment Overrides</relationshipLabel>
    <relationshipName>Equipment_Overrides</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>