force-app/main/default/objects/CPQ_Equipment_Override__c/fields/CPQ_Accpac_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Accpac_Invoice_Number__c</fullName>
    <description>Identify the invoice the equipment was sold on</description>
    <inlineHelpText>Please include the IN in the invoice number ie. &quot;IN123456&quot;</inlineHelpText>
    <label>Accpac Invoice Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>