force-app/main/default/objects/CPQ_Equipment_Override__c/fields/CPQ_AccPac_Item_No__c.field-meta.xml
<CustomField>
    <fullName>CPQ_AccPac_Item_No__c</fullName>
    <label>AccPac Item No</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>