force-app/main/default/objects/CPQ_Equipment_Override__c/fields/CPQ_AccPac_Number__c.field-meta.xml
<CustomField>
    <fullName>CPQ_AccPac_Number__c</fullName>
    <formula>CPQ_Account__r.AccPac_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccPac Number</label>
    <type>Text</type>
</CustomField>