force-app/main/default/objects/CPQ_Equipment_Override__c/fields/CPQ_Override_Commission_Percent__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Override_Commission_Percent__c</fullName>
    <description>Identify the rate at which the equipment should be commissioned</description>
    <label>Override Commission Percent</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>