force-app/main/default/objects/CPQ_Equipment_Override__c/validationRules/CPQ_Validate_Override_Comission_Percent.validationRule-meta.xml
<ValidationRule>
    <fullName>CPQ_Validate_Override_Comission_Percent</fullName>
    <active>true</active>
    <errorConditionFormula>IF( CPQ_Override_Commission_Percent__c &lt; 0 || CPQ_Override_Commission_Percent__c &gt; 0.50, true, false)</errorConditionFormula>
    <errorDisplayField>CPQ_Override_Commission_Percent__c</errorDisplayField>
    <errorMessage>Override Commission Percent must be between 0% and 50%</errorMessage>
</ValidationRule>