force-app/main/default/objects/CPQ_Equipment_Override__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CPQ_Account__c</columns>
    <columns>CPQ_Accpac_Invoice_Number__c</columns>
    <columns>CPQ_AccPac_Item_No__c</columns>
    <columns>CPQ_Override_Commission_Percent__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>